feat(user): auth part
