# docs/swagger.yaml
@@ -92,6 +92,12 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/dvarapala_internal_platform_render.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dvarapala_internal_platform_render.Response'
+      security:
+      - Bearer: []
       summary: Check service health
       tags:
       - health
@@ -112,10 +118,16 @@ paths:
                     $ref: '#/definitions/internal_user.User'
                   type: array
               type: object
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dvarapala_internal_platform_render.Response'
         "500":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/dvarapala_internal_platform_render.Response'
+      security:
+      - Bearer: []
       summary: List all users
       tags:
       - users
@@ -146,10 +158,16 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/dvarapala_internal_platform_render.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dvarapala_internal_platform_render.Response'
         "500":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/dvarapala_internal_platform_render.Response'
+      security:
+      - Bearer: []
       summary: Create a new user
       tags:
       - users
@@ -171,10 +189,16 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/dvarapala_internal_platform_render.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dvarapala_internal_platform_render.Response'
         "500":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/dvarapala_internal_platform_render.Response'
+      security:
+      - Bearer: []
       summary: Delete user
       tags:
       - users
@@ -202,10 +226,16 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/dvarapala_internal_platform_render.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dvarapala_internal_platform_render.Response'
         "404":
           description: Not Found
           schema:
             $ref: '#/definitions/dvarapala_internal_platform_render.Response'
+      security:
+      - Bearer: []
       summary: Get user by ID
       tags:
       - users
@@ -241,10 +271,16 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/dvarapala_internal_platform_render.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dvarapala_internal_platform_render.Response'
         "500":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/dvarapala_internal_platform_render.Response'
+      security:
+      - Bearer: []
       summary: Update user
       tags:
       - users
@@ -280,7 +316,15 @@ paths:
           description: Unauthorized
           schema:
             $ref: '#/definitions/dvarapala_internal_platform_render.Response'
+      security:
+      - Bearer: []
       summary: Authenticate user
       tags:
       - users
+securityDefinitions:
+  Bearer:
+    description: Type "Bearer" followed by a space and JWT token.
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
